--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="service-item item-cyan position-relative bg">
               <i class="bi bi-laptop icon"></i>
               <div>
-                <h3>Penawaran Eksklusif Kelas Online! 🏷️</h3>
+                <h3>Penawaran Eksklusif Kelas Online! 🔔</h3>
                 <p>
                   Nikmati kelas bersama mentor professional dengan peserta
                   terbatas selama sebulan! Dengan garansi pasti bisa!
@@ -439,7 +439,7 @@
             <div class="service-item item-orange position-relative">
               <i class="bi bi-people icon"></i>
               <div>
-                <h3>Kelas Offline Tersisa Sedikit! 👥⌛</h3>
+                <h3>Kelas Offline Tersisa Sedikit! ⌛🧑‍💻</h3>
                 <p>
                   Dibimbing secara langsung dari ahlinya, fokus latihan dan
                   setiap kali latihan selalu ada evaluasi hingga mahir
@@ -455,7 +455,7 @@
             <div class="service-item item-teal position-relative">
               <i class="bi bi-easel icon"></i>
               <div>
-                <h3>Kelas Presentasi Anak 🎤👦🏻</h3>
+                <h3>Kelas Presentasi Anak 🧒✨</h3>
                 <p>
                   Pendiem, pasif, kebanyakan main game, susah interaksi hingga
                   Moms diingatkan guru jika putra-putri moms kurang
@@ -473,7 +473,7 @@
             <div class="service-item item-red position-relative">
               <i class="bi bi-mortarboard icon"></i>
               <div>
-                <h3>Internship Program 🌱🚀</h3>
+                <h3>Internship Program 👩‍💻✍️</h3>
                 <p>
                   Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
                   Udah deh, latih dirimu untuk lebih produktif dan memiliki
@@ -507,7 +507,7 @@
             <div class="service-item item-pink position-relative">
               <i class="bi bi-buildings icon"></i>
               <div>
-                <h3>Kelas Khusus Kantor 👨🏻‍💼📈</h3>
+                <h3>Kelas Khusus Kantor 👨🏻‍💼💻</h3>
                 <p>
                   Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
                   gak bisa diajak diskusi. Saran kami dibandingkan benahi
@@ -547,32 +547,6 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWOxpgmqsb6vF17k0sTe9FIkVnKB9RLt7A3Y6TEIDaIZhzA5cuW=w72-h72-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-6" />
-                      <h3>Valda Kustarini</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        I enjoyed studying in the basics plus dialogue class. The material was excellent, and there was plenty of room for practice. <span
-                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
-                        <span class="moreText">I'll be more confident in public speaking in the future now that I've mastered the fundamentals.  </span><span class="readLess"> &laquo; Read Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
