update member dan update foto

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
   <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="../promo/assets/img/image.png" height="0" width="0"
+    <iframe src="assets/img/image2.jpg" height="0" width="0"
       style="display: none; visibility: hidden"></iframe> </noscript><!-- End Google Tag Manager (noscript) -->
 
   <!-- ======= Top Bar, Header, Side Bar ======= -->
@@ -1320,7 +1320,7 @@
               <div class="col-md-3 col-6">
                 <div class="single-counter-box">
                   <div class="number">
-                    <span data-purecounter-start="0" data-purecounter-end="1105" data-purecounter-duration="1"
+                    <span data-purecounter-start="0" data-purecounter-end="3107" data-purecounter-duration="1"
                       class="purecounter">0</span>+
                   </div>
                   <p class="text-nowrap">Total Member</p>
