--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
 
   <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe src="assets/img/image2.jpg" height="0" width="0"
+    <iframe src="assets/img/senyumin.jpg" height="0" width="0"
       style="display: none; visibility: hidden"></iframe> </noscript><!-- End Google Tag Manager (noscript) -->
 
-  <!-- ======= Top Bar, Header, Side Bar ======= -->
+  <!-- ======= Top Bar, Header, Side B  ar ======= -->
   <main-header></main-header>
   <!-- ======= Top Bar, Header, Side Bar ======= -->
 
@@ -548,6 +548,64 @@
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
 
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWcbVoJQEnVh8WIYTGasv4J2VENig0krdzz5MzP1d4oqJAZMLDU=w90-h90-p-rp-mo-ba2-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Yaniek Dwi Hastanti</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Thank you for the guidance over these 7 sessions. The mentor, Kak Rendra, was fun and very expressive when explaining the material. In every session, right after the theory was finished,
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                       <span class="moreText"> The instructor was very communicative, provided constructive feedback, and gave plenty of practical exercises so I could apply them directly. Now, I feel much more confident and better prepared to face presentations or speak in public forums. In my opinion, learning at Dialogika is highly recommended for anyone who wants to improve.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9in0JsfmI1jW8u2YpZTSsM-rl2JO3vOVMfNQrP4943XKzZet0=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Almaas Tifani</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Before joining the public speaking class at Dialogika, I felt my public speaking skills were a mess. However, after attending every session, I learned so many things, from vocal techniques, how to manage intonation, and body language, to strategies for building self-confidence. 
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The instructor was very communicative, provided constructive feedback, and gave plenty of practical exercises so I could apply them directly. Now, I feel much more confident and better prepared to face presentations or speak in public forums. In my opinion, learning at Dialogika is highly recommended for anyone who wants to improve.
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+                 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
