--- a/index.html
+++ b/index.html
@@ -552,6 +552,36 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjX47VLe0cHCekT1ESnyYB2_nXFyBsUn5PsPN95KXEtrYlrr7Zsq=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Monica Sella Anggita</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The classes at Dialogika are fun and super useful!
+                        The mentors are very supportive, and the materials are easy to understand.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                       <span class="moreText"> Totally recommended for anyone who wants to improve their public speaking skills 🤩💯
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjWcbVoJQEnVh8WIYTGasv4J2VENig0krdzz5MzP1d4oqJAZMLDU=w90-h90-p-rp-mo-ba2-br100"
                         class="testimonial-img" alt="testimoni-2" />
                       <h3>Yaniek Dwi Hastanti</h3>
