--- a/index.html
+++ b/index.html
@@ -573,6 +573,78 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjU2g5tDrB5S1RwbKw-w-HdHd5xLPTuALF1gPWBPrkGmJd705J0=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>yanie virgo</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Thank you, Dialogika, for facilitating public speaking lessons with engaging tutors 
+                        and a comfortable environment. The learning outcomes are remarkable; the children are 
+                        able to speak confidently and authoritatively in front of an audience. 
+                        
+                        <!--<span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The mentors were also kind, beautiful, friendly, and clear, and the place was comfortable. 
+                        Overall, the mentors also had a really positive vibe! 
+                        Because of Dialogika, my communication skills and self-confidence have significantly improved. 
+                        Highly recommended for anyone looking to improve their communication skills!! 😻😻
+                        Thank you, Dialogika!
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWl9PTjM0JcGEzRvAqjiQFiqsFJcMRKViEn7_L1buB906y55flm=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Nadya Nayla Putri</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        SO GOOD!!!! The public speaking training at Dialogika really helped me gain confidence when speaking in public. 
+                        The material was presented in a very clear and practical manner, making it easy to understand and put into practice 
+                        immediately. At Dialogika, we not only taught theory but also how to put it into practice. 
+                        
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The mentors were also kind, beautiful, friendly, and clear, and the place was comfortable. 
+                        Overall, the mentors also had a really positive vibe! 
+                        Because of Dialogika, my communication skills and self-confidence have significantly improved. 
+                        Highly recommended for anyone looking to improve their communication skills!! 😻😻
+                        Thank you, Dialogika!
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> 
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjX47VLe0cHCekT1ESnyYB2_nXFyBsUn5PsPN95KXEtrYlrr7Zsq=w90-h90-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
                       <h3>Monica Sella Anggita</h3>
