--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 <section id="services" class="quickstart-services section light-background">
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>Penawaran Eksklusif Hari Ini! 🎉✨</h2>
+    <h2>Penawaran Eksklusif Hari Ini! ✨🎫🖊️</h2>
     <p>
       Segera manfaatkan penawaran spesial kelas dan event menarik dari
       Dialogika! 🚀
@@ -423,7 +423,7 @@
         <div class="service-item item-cyan position-relative bg">
           <i class="bi bi-laptop icon"></i>
           <div>
-            <h3>Penawaran Eksklusif Kelas Online! 🌐✨</h3>
+            <h3>Penawaran Eksklusif Kelas Online! 🌐🌟</h3>
             <p>
               Nikmati kelas bersama mentor professional dengan peserta
               terbatas selama sebulan! Dengan garansi pasti bisa! ✅
@@ -443,7 +443,7 @@
         <div class="service-item item-orange position-relative">
           <i class="bi bi-people icon"></i>
           <div>
-            <h3>Kelas Offline Tersisa Sedikit! 🏫🔥</h3>
+            <h3>Kelas Offline Tersisa Sedikit! ⏰✍🏻</h3>
             <p>
               Dibimbing secara langsung dari ahlinya, fokus latihan dan
               setiap kali latihan selalu ada evaluasi hingga mahir 💪
@@ -463,7 +463,7 @@
         <div class="service-item item-teal position-relative">
           <i class="bi bi-easel icon"></i>
           <div>
-            <h3>Kelas Presentasi Anak 🎓🌟</h3>
+            <h3>Kelas Presentasi Anak 🎓🏅</h3>
             <p>
               Pendiem, pasif, kebanyakan main game, susah interaksi hingga Moms
               diingatkan guru jika putra-putri moms kurang bersosialisasi.
@@ -484,7 +484,7 @@
         <div class="service-item item-red position-relative">
           <i class="bi bi-mortarboard icon"></i>
           <div>
-            <h3>Internship Program 🚀💻</h3>
+            <h3>Internship Program 🖥️🔥</h3>
             <p>
               Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
               Udah deh, latih dirimu untuk lebih produktif dan memiliki mindset
@@ -505,7 +505,7 @@
         <div class="service-item item-indigo position-relative">
           <i class="bi bi-calendar2-check icon"></i>
           <div>
-            <h3>Jadwalkan Bertemu Admin 📆💬</h3>
+            <h3>Jadwalkan Bertemu Admin 📆📝</h3>
             <p>
               Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
               mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -525,7 +525,7 @@
         <div class="service-item item-pink position-relative">
           <i class="bi bi-buildings icon"></i>
           <div>
-            <h3>Kelas Khusus Kantor 🏢✨</h3>
+            <h3>Kelas Khusus Kantor 🏢👨🏻‍💼</h3>
             <p>
               Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
               gak bisa diajak diskusi. Saran kami dibandingkan benahi sebelum
