--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
 <section id="services" class="quickstart-services section light-background">
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
-    <h2>Penawaran Eksklusif Hari Ini! 🎉✨</h2>
+    <h2>Penawaran Eksklusif Hari Ini! ⭐🎯</h2>
     <p>
       Segera manfaatkan penawaran spesial kelas dan event menarik dari
-      Dialogika! 🚀
+      Dialogika! ✨
     </p>
   </div>
   <!-- End Section Title -->
@@ -423,16 +423,16 @@
         <div class="service-item item-cyan position-relative bg">
           <i class="bi bi-laptop icon"></i>
           <div>
-            <h3>Penawaran Eksklusif Kelas Online! 🌐✨</h3>
+            <h3>Penawaran Eksklusif Kelas Online! 💻📘</h3>
             <p>
               Nikmati kelas bersama mentor professional dengan peserta
-              terbatas selama sebulan! Dengan garansi pasti bisa! ✅
+              terbatas selama sebulan! Dengan garansi pasti bisa! 🟩
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20tertarik%20dengan%20*PROMO*%20program%20kelas%20online%20*via%20zoom*%2C%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
               class="read-more stretched-link"
               target="__blank"
-              >💬 Contact Admin <i class="bi bi-arrow-right"></i
+              >💬 Hubungi Admin <i class="bi bi-arrow-right"></i
             ></a>
           </div>
         </div>
@@ -443,7 +443,7 @@
         <div class="service-item item-orange position-relative">
           <i class="bi bi-people icon"></i>
           <div>
-            <h3>Kelas Offline Tersisa Sedikit! 🏫🔥</h3>
+            <h3>Kelas Offline Tersisa Sedikit! 🏫⚠️</h3>
             <p>
               Dibimbing secara langsung dari ahlinya, fokus latihan dan
               setiap kali latihan selalu ada evaluasi hingga mahir 💪
@@ -452,7 +452,7 @@
               href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20apakah%20seat%20kelas%20offline-nya%20masih%20ada%3F%20boleh%20diinfokan%20lebih%20lanjut%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
               class="read-more stretched-link"
               target="__blank"
-              >📩 Contact Admin <i class="bi bi-arrow-right"></i
+              >📩 Hubungi Admin <i class="bi bi-arrow-right"></i
             ></a>
           </div>
         </div>
@@ -463,11 +463,11 @@
         <div class="service-item item-teal position-relative">
           <i class="bi bi-easel icon"></i>
           <div>
-            <h3>Kelas Presentasi Anak 🎓🌟</h3>
+            <h3>Kelas Presentasi Anak 🎒🌟</h3>
             <p>
               Pendiem, pasif, kebanyakan main game, susah interaksi hingga Moms
               diingatkan guru jika putra-putri moms kurang bersosialisasi.
-              Mumpung masih dini, benahi sekarang! 💬
+              Mumpung masih dini, benahi sekarang! 🗣️
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20boleh%20di%20infokan%20untuk%20kelas%20public%20speaking%20anak%3F%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
@@ -484,7 +484,7 @@
         <div class="service-item item-red position-relative">
           <i class="bi bi-mortarboard icon"></i>
           <div>
-            <h3>Internship Program 🚀💻</h3>
+            <h3>Internship Program 🚀🧑‍💻</h3>
             <p>
               Gabut, sulit cari kerja, fomo teman-teman lo pada magang.
               Udah deh, latih dirimu untuk lebih produktif dan memiliki mindset
@@ -494,7 +494,7 @@
               href="https://dialogika.co/intern/"
               target="__blank"
               class="read-more stretched-link"
-              >🔗 Check Info Magang <i class="bi bi-arrow-right"></i
+              >🔗 Info Magang <i class="bi bi-arrow-right"></i
             ></a>
           </div>
         </div>
@@ -505,7 +505,7 @@
         <div class="service-item item-indigo position-relative">
           <i class="bi bi-calendar2-check icon"></i>
           <div>
-            <h3>Jadwalkan Bertemu Admin 📆💬</h3>
+            <h3>Jadwalkan Bertemu Admin 📅🤝</h3>
             <p>
               Masih ragu dengan kebutuhanmu? atau ingin konsultasi lebih
               mendalam bersama Admin Dialogika. Yuk janjian dulu
@@ -514,7 +514,7 @@
               href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20ingin%20bertemu%20dan%20diskusi%20terkait%20kelas%2Fkerjasama%2C%20apakah%20ada%20tanggal%20yang%20bisa%20di%20jadwalkan%3F%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
               target="__blank"
               class="read-more stretched-link"
-              >🗂️ Check Jadwal Admin <i class="bi bi-arrow-right"></i
+              >🗂️ Lihat Jadwal Admin <i class="bi bi-arrow-right"></i
             ></a>
           </div>
         </div>
@@ -525,7 +525,7 @@
         <div class="service-item item-pink position-relative">
           <i class="bi bi-buildings icon"></i>
           <div>
-            <h3>Kelas Khusus Kantor 🏢✨</h3>
+            <h3>Kelas Khusus Kantor 🏢🚀</h3>
             <p>
               Karyawan pendiem, nggak aktif, gak punya inisiatif, hingga
               gak bisa diajak diskusi. Saran kami dibandingkan benahi sebelum
@@ -535,7 +535,7 @@
               href="https://api.whatsapp.com/send?phone=6285162992597&text=Haloo%20kak%20saya%20ingin%20kami%20bertanya%20tentang%20kelas%20khusus%20corporate%2C%20apakah%20bulan%20ini%20bisa%20dilaksanakan%3F%0A%0A%0A%60%60%60dari%20ig%2Ftiktok%2Fx%2Ffb%60%60%60"
               target="__blank"
               class="read-more stretched-link"
-              >📞 Contact Admin <i class="bi bi-arrow-right"></i
+              >📞 Hubungi Admin <i class="bi bi-arrow-right"></i
             ></a>
           </div>
         </div>
@@ -544,6 +544,7 @@
     </div>
   </div>
 </section>
+
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
