update testi promo

--- a/index.html
+++ b/index.html
@@ -574,6 +574,160 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWXtpkdrwViTDUOaHRqoivst33xyJiG_ZtPtqdzcItdram85_4=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Sri Ramadhani</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Seru Banget bisa ketemu teman belajar yg random & mentor yg ud berpengalaman banget serta ilmu
+                        ny yg membangun. makasih dialogika
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText">  Setiap sesi setelah materi selesai, langsung dikasi kesempatan untuk praktik. Sukses selalu Dialogika🤩 …
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWk5f4ztlVIVx7UjarIcehGkFHKaY_fzljvxjoOqdK88I8PQs4=w45-h45-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>M Haikal</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Thank you for your guidance during this session. The mentor was engaging and very expressive in explaining the material. 
+                        I hope this material can be put into practice in my professional life. Best of luck, Dialogika.
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText">  Setiap sesi setelah materi selesai, langsung dikasi kesempatan untuk praktik. Sukses selalu Dialogika🤩 …
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjURHonKaeilr8lbPqd4V9bmxHXRvK694gm_B1M1y4QSWt1C2QtM=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Evi Rahmani</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Dialogika’s public speaking class is great, and the mentors are really excellent. Since joining
+                        this class, I’ve become more confident to speak in front of others, even though I still need to
+                        keep learning. If I have the opportunity, I’d love to join the next class again.
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText">  Setiap sesi setelah materi selesai, langsung dikasi kesempatan untuk praktik. Sukses selalu Dialogika🤩 …
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span> -->
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWnC-pkVVK4NkGIZFaxDpIVZ7OUxMZFNzfywU5jQdugXxiqRVfcHg=w90-h90-p-rp-mo-ba2-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Galih Kirana</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        Learning here is so much fun. The mentors are engaging and their presentations are easy to
+                        understand.
+                        There's a practice session at every meeting to hone your public speaking skills.
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText">  Setiap sesi setelah materi selesai, langsung dikasi kesempatan untuk praktik. Sukses selalu Dialogika🤩 …
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUWDaTQT9NsgGlbthGTYhjHiIcAGqvrKDXE_E31pbCqi8aNTMUO=w90-h90-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-2" />
+                      <h3>Sukma Ayu Ghira Indah N.</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        It was so much fun to be able to participate in the public speaking learning experience here.
+                        The mentor, Ms. Fanny, was so friendly! I'm really satisfied and feel the impact after joining
+                        Dialogika.
+                        Keep up the good work, Dialogika
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText">  Setiap sesi setelah materi selesai, langsung dikasi kesempatan untuk praktik. Sukses selalu Dialogika🤩 …
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjU2g5tDrB5S1RwbKw-w-HdHd5xLPTuALF1gPWBPrkGmJd705J0=w45-h45-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-2" />
                       <h3>yanie virgo</h3>
