--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
                 kelas online dan offline
               </p>
               <div class="text-start" style="margin-top: 20px">
-                <a href="mentor/">List Mentor</a>
+                <a href="https://www.dialogika.co/mentor/">List Mentor</a>
               </div>
             </div>
           </div>
