upd button daftar

--- a/index.html
+++ b/index.html
@@ -1715,8 +1715,114 @@
         <!-- /.bg -->
       </div>
       <!-- /.container -->
-    </div>
+     </div>
     <!-- /.theme-counter -->
+        <section id="contact" class="contact-append section-bg">
+
+            <!--  Section Title -->
+            <div class="container section-title" data-aos="fade-up">
+                <h6>Form</h6>
+                <h2 id="textChange">Registration</h2>
+            </div><!-- End Section Title -->
+
+            <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+                <div class="row gy-4">
+
+                    <div class="col-lg-6 order-2 order-lg-1">
+
+                        <div>
+                            <iframe style="border:0; width: 100%; height: 300px;"
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15813.303312562135!2d110.3785878!3d-7.7552251!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a597ab489149d%3A0x9306a2474322de7c!2sDialogika%20Kelas%20Public%20Speaking!5e0!3m2!1sid!2sid!4v1700713315422!5m2!1sid!2sid"
+                                frameborder="0" allowfullscreen></iframe>
+
+                            <div class="row gy-4">
+
+                                <div class="col-md-6">
+                                    <div class="info-item" data-aos="fade" data-aos-delay="300">
+                                        <i class="bi bi-telephone"></i>
+                                        <h3>Call Us</h3>
+                                        <p>+62 851 6299 2597</p>
+                                    </div>
+                                </div><!-- End Info Item -->
+
+                                <div class="col-md-6">
+                                    <div class="info-item" data-aos="fade" data-aos-delay="400">
+                                        <div class="float-right"><i class="bi bi-envelope"></i></div>
+                                        <h3>Email Us</h3>
+                                        <p>hello@dialogika.co</p>
+                                    </div>
+                                </div><!-- End Info Item -->
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="col-lg-6 order-1 order-lg-2">
+                        <form id="uploadForm" class="php-email-form needs-validation">
+                            <div class="row gy-4">
+
+                                <div class="col-md-6">
+                                    <input type="text" name="Name" class="form-control" id="names"
+                                        placeholder="Nama Lengkap*" required>
+                                </div>
+
+                                <!-- Input whatsapp menggunakan International Phone Number di asset/vendor/international-phone-number/script.js -->
+                                <div class="col-md-6">
+                                    <label for="whatsapp" style="display: none;">WhatsApp Number:</label>
+                                    <input type="text" id="whatsapp-number" name="whatsapp-number" class="form-control"
+                                        required />
+                                </div>
+
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" name="Location" id="locations"
+                                        pattern="[a-zA-Z0-9\s.,-]{3,100}" placeholder="Domisili*" required>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <select name="Program" id="programs" class="form-control" name="Location"
+                                        id="locations" placeholder="Domisili*" required>
+                                        <option value="" selected disabled value="">Program Yang Akan Diambil</option>
+                                        <optgroup label="First Class">
+                                            <option value="b0db1cd0-b016-46c2-8fdf-3dd65a2f0c16">FC Yogyakarta </option>
+                                            <option value="b0db1cd0-b016-46c2-8fdf-3dd65a2f0c16">FC Tangerang </option>
+                                            <option value="b0db1cd0-b016-46c2-8fdf-3dd65a2f0c16">FC Surabaya </option>
+                                            <option value="b0db1cd0-b016-46c2-8fdf-3dd65a2f0c16">FC Solo </option>
+                                        </optgroup>
+                                        <optgroup label="First Private">
+                                            <option value="7b444128-987a-4888-b6a8-fdcb3122dd95">FP Yogyakarta </option>
+                                            <option value="7b444128-987a-4888-b6a8-fdcb3122dd95">FP Tangerang </option>
+                                            <option value="7b444128-987a-4888-b6a8-fdcb3122dd95">FP Surabaya </option>
+                                        </optgroup>
+                                        <optgroup label="Konsultasi">
+                                            <option>Asking Admin </option>
+                                        </optgroup>
+                                    </select>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <textarea class="form-control" name="Ket" id="messages" rows="7"
+                                        placeholder="Masalah didalam public speaking?"></textarea>
+                                </div>
+
+                                <div class="col-md-12 text-center">
+                                    <div class="loading">Loading</div>
+                                    <div class="error-message"></div>
+                                    <div class="sent-message">Your message has been sent. Thank you!</div>
+
+                                    <button type="submit" id="send_contact" class="send_contact">Send Whatsapp</button>
+
+                                </div>
+
+                            </div>
+                        </form>
+                    </div><!-- End Contact Form -->
+
+                </div>
+
+            </div>
+        </section><!-- End Contact Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
